--- a/lectures/day_01/index.html
+++ b/lectures/day_01/index.html
@@ -68,7 +68,7 @@
         data-charset="iso-8859-15">
     </section>
  
-    <section data-markdown="05conditionalsLoops.md"
+    <section data-markdown="06functions.md"
         data-separator="^---"
         data-separator-vertical="^--"
         data-separator-notes="^note:"
